apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vaultwarden
    namespace: homelab
    labels:
        app: vaultwarden
spec:
    replicas: 1
    selector:
        matchLabels:
            app: vaultwarden
    template:
        metadata:
            labels:
                app: vaultwarden
        spec:
            securityContext:
                runAsNonRoot: true
                runAsUser: 1000
                runAsGroup: 1000
                fsGroup: 1000
            nodeSelector:
                kubernetes.io/hostname: "realtong-server"
            containers:
                - name: vaultwarden
                  image: vaultwarden/server:1.37.4
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      capabilities:
                          drop: ["ALL"]
                  ports:
                      - containerPort: 8080
                  volumeMounts:
                      - name: vaultwarden-data
                        mountPath: /data
                      - name: tmp
                        mountPath: /tmp
            volumes:
                - name: vaultwarden-data
                  persistentVolumeClaim:
                      claimName: vaultwarden-pvc
                - name: tmp
                  emptyDir: {}
