apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: vaultwarden
    namespace: homelab
    labels:
        app: vaultwarden
spec:
    selector:
        app: vaultwarden
    ports:
        - name: http
          port: 80
          targetPort: 8080
        - name: websocket
          port: 3012
          targetPort: 3012
