apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vaultwarden-ingress
    namespace: homelab
    annotations:
        glance/icon: di:vaultwarden
        glance/name: "Vaultwarden"
        glance/url: "https://pwd.realtong.cn"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "25m"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - pwd.realtong.cn
    rules:
        - host: pwd.realtong.cn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: vaultwarden
                            port:
                                number: 80
